tests/neg/missing-implicit.check
-- [E008] Not Found Error: tests/neg/missing-implicit.scala:5:25 -------------------------------------------------------
5 |  case x :: xs1 if limit > 0 => consume(xs1, limit - x) // error // error
  |                   ^^^^^^^
  |                   value > is not a member of T, but could be made available as an extension method.
  |
  |                   One of the following imports might fix the problem:
  |
  |                     import math.Ordered.orderingToOrdered
  |                     import math.Ordering.Implicits.infixOrderingOps
  |
-- [E008] Not Found Error: tests/neg/missing-implicit.scala:5:51 -------------------------------------------------------
5 |  case x :: xs1 if limit > 0 => consume(xs1, limit - x) // error // error
  |                                             ^^^^^^^
  |                                 value - is not a member of T, but could be made available as an extension method.
  |
  |                                 The following import might fix the problem:
  |
  |                                   import math.Numeric.Implicits.infixNumericOps
  |
